--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.klepsy">
 
     <application
+        android:name=".screens.MainActivity"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".App"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Klepsy">
+        android:theme="@style/Theme.Klepsy"
+        tools:ignore="Instantiatable">
         <activity
-            android:name=".screens.TaskerActivity"
+            android:name=".whatIsBeen"
             android:exported="false" />
         <activity
             android:name=".screens.probkich"
